<resources>
    <string name="app_name">MentalHealthApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_user">New User?</string>
    <string name="reflect">Reflect</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="chat">CHAT</string>
    <string name="profile">Profile</string>
    <string name="login">Log in</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="i_want_to_get_help">I want to GET help</string>
    <string name="i_want_to_give_help">I want to GIVE help</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="bio_prompt">Fill out a short bio about yourself and your experience with mental health: </string>
    <string name="bio_input_hint">Hi! My name is ___ and I\'ve experienced...</string>
    <string name="submit">submit</string>
    <string name="more">More info:</string>
    <string name="lorem_short">Lorem ipsum </string>
    <string name="profile_iv_description">Profile Pic</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter Message...</string>
    <string name="help">help</string>
    <string name="edit_bio">Edit bio...</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="play_description">Play btn</string>
    <string name="journal_title">Thought Journal</string>
    <string name="all_entries">All my entries</string>
    <string name="btn_emergency">IMMEDIATE HELP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipient">recipient:</string>
    <string name="list_helpers_title">Select a Helper to chat:</string>
    <string name="no_helpers_as_result">Oops, No helpers avaliable. You can select Other as category and find somebody willing to help you!.</string>
    <string name="chat_list_title">Chats</string>
    <string name="log_in">Log in</string>
    <string name="back_bios_list_alt">   Let\'s find them!   </string>
    <string name="select_a_date">SELECT A DATE!</string>
    <string name="my_journal">My Journal</string>
    <string name="no_chat">You do not have any chats yet!</string>
    <string name="about_me">About me:</string>
    <string name="bio_hint">You don\'t have a bio yet!</string>
    <string name="talk">Talk to me about:</string>
</resources>

