<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingVertical="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="60dp">

    <TextView
        android:id="@+id/tv_author_message"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_alignTop="@id/iv_profile_pic_message"
        android:layout_toRightOf="@id/iv_profile_pic_message"
        android:paddingBottom="4dp"
        android:text="@string/lorem_short"
        app:layout_constraintBottom_toTopOf="@+id/message_body"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_pic_message"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_author_message"
        android:layout_alignLeft="@+id/tv_author_message"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:padding="7dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/their_chat_bubble"
        android:text="@string/lorem"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_pic_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_author_message" />

    <ImageView
        android:id="@+id/iv_profile_pic_message"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/profile_iv_description"
        app:layout_constraintEnd_toStartOf="@+id/tv_author_message"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />
</android.support.constraint.ConstraintLayout>